--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,7 @@
           {% for post in site.categories['Atualizações'] limit:1 %}
           <li><a href="{{ post.url | relative_url }}">Baixar atualização mais recente</a></li>
           {% endfor %}
+          <li><a href="{{ "/musicas/" | relative_url }}">Músicas</a></li>
           <li><a href="{{ "/perguntas-frequentes/" | relative_url }}">Perguntas frequentes</a></li>
           <li><a href="{{ "/contato/" | relative_url }}">Contato</a></li>
           <!--<li id="logar"><a href="{{ "/login/" | relative_url }}" target="_self">Login</a></li>-->
