--- a/assets/main.scss
+++ b/assets/main.scss
@@ -321,7 +321,59 @@ main {
 			}
 		}
 	}
+	.container {
+		padding: 0px 0 0px 0;
+		.load-more {
+			text-align: center;
+			margin: 25px 0 25px 0;
+				a {
+					padding: 7px 18px;
+				    border: 1px solid #eee;
+				    margin-left: -2px;
+				    margin-right: -2px;
+				    background-color: #ffffff;
+				    display: inline-block;
+				}
+				a:hover {
+					background-color: #f1f1f1;
+					color: #333; 
+				}
+		}
+		.videos {
+			display: flex;
+			flex-flow: row wrap;
+			justify-content: center;
+			.video {
+				flex: 1 0 250px;
+				max-width: 272px;
+				margin: 10px;
+				figure {
+					img {
+						width: 100%;
+					}
+					figcaption {
+						font-size: 16px;
+						color: #1F6ED4;
+					}
+				}
+			}
+		}
+	}
+	.player{
+		width: 100%;
+		text-align: center;
+		background: #000;
+		float: left;
+		margin-bottom: 5px;
+		iframe{
+			max-width: 1366px;
+			width: 80%;
+			height: 500px;
+			background: url("../img/loading-video.svg") no-repeat center center;
+		}
+	}
 }
+
 article {
 	.post-header {
 		.post-title{
@@ -516,6 +568,11 @@ footer {
 	.container {
 		width: 90%;
 	}
+	.player {
+		iframe{
+			height: 400px;
+		}
+	}
 }
 
 @media screen and (max-width: 1100px) {
@@ -576,6 +633,11 @@ footer {
 						width: 100%;
 					}
 				}
+			}
+		}
+		.player {
+			iframe{
+				height: 350px;
 			}
 		}
 	}
@@ -645,6 +707,18 @@ footer {
 				}
  			}
  		}
+ 		.container {
+			.videos {
+				.video {
+					max-width: none;
+				}
+			}
+		}
+		.player {
+			iframe{
+				height: 250px;
+			}
+		}
  	}
  	article {
 		.post-content {
