--- a/assets/main.scss
+++ b/assets/main.scss
@@ -323,6 +323,13 @@ main {
 	}
 	.container {
 		padding: 0px 0 0px 0;
+		.video-category {
+			margin: 15px 0 10px 0;
+			h2 {
+				font-size: 24px;
+				color: #1F6ED4;
+			}
+		}
 		.load-more {
 			text-align: center;
 			margin: 25px 0 25px 0;
@@ -353,7 +360,7 @@ main {
 					}
 					figcaption {
 						font-size: 16px;
-						color: #1F6ED4;
+						color: #333333;
 					}
 				}
 			}
