--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,28 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
+                <h3>Em Breve</h3>
+              </div>
+              <div class="card-subtitle">
+                <h4>Atualização 19.0.6</h4>
+              </div>
+              <div class="card-content next-updates">
+                  <p>10/10/2019</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-title">
+                <h3>Em Novembro</h3>
+              </div>
+              <div class="card-subtitle">
+                <h4>Atualização 20.0</h4>
+              </div>
+              <div class="card-content next-updates">
+                  <img src="{{ "/assets/img/FIFA_Cover.jpg" | relative_url }}" alt="Ceará" title="Ceará">
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-title">
                 <h3>Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
@@ -64,7 +86,7 @@
                   <div id="feed2"></div>
               </div>
             </div>
-            <div class="card">
+            <!--<div class="card">
               <div class="card-title">
                 <h3>Parceiros</h3>
               </div>
@@ -84,7 +106,7 @@
                     <a href="#"></a>
                   </div>
               </div>
-            </div>
+            </div>-->
             <!--<div class="card">
               <div class="card-title">
                 <h3>Trabalhos recentes</h3>
