--- a/assets/main.scss
+++ b/assets/main.scss
@@ -237,6 +237,9 @@ main {
 						p {
 							color: #999;
 						}
+						img {
+							max-width: 100%;
+						}
 						.button {
 							margin-top: 10px;
 							a {
