--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,17 +28,6 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
-                <h3>Em Breve</h3>
-              </div>
-              <div class="card-subtitle">
-                <h4>Atualização 19.0.6</h4>
-              </div>
-              <div class="card-content next-updates">
-                  <p>10/10/2019</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-title">
                 <h3>Em Novembro</h3>
               </div>
               <div class="card-subtitle">
@@ -48,6 +37,19 @@
                   <img src="{{ "/assets/img/FIFA_Cover.jpg" | relative_url }}" alt="Ceará" title="Ceará">
               </div>
             </div>
+            <!--<div class="card">
+              <div class="card-title">
+                <h3>Canais Recomendados</h3>
+              </div>
+              <div class="card-subtitle">
+                <a href="#"><h4>Geração Gamer</h4></a>
+              </div>
+              <div id="feed3"></div>
+              <div class="card-subtitle">
+                <a href="#"><h4>Futebol Virtual</h4></a>
+              </div>
+              <div id="feed4"></div>
+            </div>-->
             <div class="card">
               <div class="card-title">
                 <h3>Elencos Atualizados</h3>
