--- a/assets/main.scss
+++ b/assets/main.scss
@@ -219,11 +219,38 @@ main {
 						align-items: center;
 						border-top: 1px solid #eaeaea;
 						border-bottom: 1px solid #eaeaea;
+						a {
+							width: 100%;
+							height: 72px;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+						}
 						h4 {
 							font-family: opensans-light,"Helvetica Neue",Arial,sans-serif;
 							font-size: 25px;
 							font-weight: 300;
 							color: #333;
+						}
+					}
+					.video {
+						padding: 5px 7px;
+						figure {
+							position: relative;
+							height: auto;
+							img {
+								width: 100%;
+								height: auto;
+							}
+							figcaption {
+								background: rgba(0, 0, 0, 0.7);
+							    color: #FFF;
+							    position: absolute;
+							    bottom: 5px;
+							    left: 0;
+							    right: 0;
+							    padding: 10px;
+							}
 						}
 					}
 					.card-content.next-updates {
