--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           <div class="column-right" id="column-right" data-turbolinks-permanent>
             <div class="card">
               <div class="card-title">
-                <h3>Em Novembro</h3>
+                <h3>Em Novembro (20/11/2019)</h3>
               </div>
               <div class="card-subtitle">
                 <h4>Atualização 20.0</h4>
