--- a/_includes/head.html
+++ b/_includes/head.html
@@ -121,8 +121,8 @@
   {% include google-analytics.html %}
   {% endif %}
   <script>
-  if (navigator.userAgent.indexOf("Google Page Speed") == -1) {
-    setTimeout(function() {
+  //if (navigator.userAgent.indexOf("Google Page Speed") == -1) {
+    //setTimeout(function() {
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -135,8 +135,8 @@
       transport: 'beacon',
     });
 
-    }, 200);
-  }
+    //}, 200);
+  //}
 
 
 
