--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,12 +28,12 @@ body {
 	max-width: 1320px;
 	margin: 0 auto;
 }
-header#header {
+header {
 	margin: 0 0 20px 0;
-	background-color: #9F1617;
 	.inner-header {
 		width: 100%;
-		padding: 35px 0 7px 0; //padding: 7px 0 7px 0;
+		padding: 7px 0 7px 0;
+		background-color: #9F1617;
 		display: flex;
 		align-items: center;
 		.container {
@@ -122,152 +122,6 @@ header#header {
 		}
 	}
 }
-.lightrope {
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  position: absolute;
-  z-index: 1;
-  margin: -15px 0 0 0;
-  padding: 0;
-  pointer-events: none;
-  width: 100%;
-}
-.lightrope li {
-  position: relative;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: block;
-  width: 12px;
-  height: 28px;
-  border-radius: 50%;
-  margin: 20px;
-  display: inline-block;
-  background: #00f7a5;
-  box-shadow: 0px 4.6666666667px 24px 3px #00f7a5;
-  -webkit-animation-name: flash-1;
-          animation-name: flash-1;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-}
-.lightrope li:nth-child(2n+1) {
-  background: cyan;
-  box-shadow: 0px 4.6666666667px 24px 3px rgba(0, 255, 255, 0.5);
-  -webkit-animation-name: flash-2;
-          animation-name: flash-2;
-  -webkit-animation-duration: 0.4s;
-          animation-duration: 0.4s;
-}
-.lightrope li:nth-child(4n+2) {
-  background: #f70094;
-  box-shadow: 0px 4.6666666667px 24px 3px #f70094;
-  -webkit-animation-name: flash-3;
-          animation-name: flash-3;
-  -webkit-animation-duration: 1.1s;
-          animation-duration: 1.1s;
-}
-.lightrope li:nth-child(odd) {
-  -webkit-animation-duration: 1.8s;
-          animation-duration: 1.8s;
-}
-.lightrope li:nth-child(3n+1) {
-  -webkit-animation-duration: 1.4s;
-          animation-duration: 1.4s;
-}
-.lightrope li:before {
-  content: "";
-  position: absolute;
-  background: #222;
-  width: 10px;
-  height: 9.3333333333px;
-  border-radius: 3px;
-  top: -4.6666666667px;
-  left: 1px;
-}
-.lightrope li:after {
-  content: "";
-  top: -14px;
-  left: 9px;
-  position: absolute;
-  width: 52px;
-  height: 18.6666666667px;
-  border-bottom: solid #222 2px;
-  border-radius: 50%;
-}
-.lightrope li:last-child:after {
-  content: none;
-}
-.lightrope li:first-child {
-  margin-left: -40px;
-}
-
-@-webkit-keyframes flash-1 {
-  0%, 100% {
-    background: #00f7a5;
-    box-shadow: 0px 4.6666666667px 24px 3px #00f7a5;
-  }
-  50% {
-    background: rgba(0, 247, 165, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(0, 247, 165, 0.2);
-  }
-}
-
-@keyframes flash-1 {
-  0%, 100% {
-    background: #00f7a5;
-    box-shadow: 0px 4.6666666667px 24px 3px #00f7a5;
-  }
-  50% {
-    background: rgba(0, 247, 165, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(0, 247, 165, 0.2);
-  }
-}
-@-webkit-keyframes flash-2 {
-  0%, 100% {
-    background: cyan;
-    box-shadow: 0px 4.6666666667px 24px 3px cyan;
-  }
-  50% {
-    background: rgba(0, 255, 255, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(0, 255, 255, 0.2);
-  }
-}
-@keyframes flash-2 {
-  0%, 100% {
-    background: cyan;
-    box-shadow: 0px 4.6666666667px 24px 3px cyan;
-  }
-  50% {
-    background: rgba(0, 255, 255, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(0, 255, 255, 0.2);
-  }
-}
-@-webkit-keyframes flash-3 {
-  0%, 100% {
-    background: #f70094;
-    box-shadow: 0px 4.6666666667px 24px 3px #f70094;
-  }
-  50% {
-    background: rgba(247, 0, 148, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(247, 0, 148, 0.2);
-  }
-}
-@keyframes flash-3 {
-  0%, 100% {
-    background: #f70094;
-    box-shadow: 0px 4.6666666667px 24px 3px #f70094;
-  }
-  50% {
-    background: rgba(247, 0, 148, 0.4);
-    box-shadow: 0px 4.6666666667px 24px 3px rgba(247, 0, 148, 0.2);
-  }
-}
-
 main {
 	 flex: 1;
 	.container {
@@ -975,8 +829,10 @@ footer {
   margin-right: 10px; /* 2 */
   margin-top: 5px; /* 3 */
   margin-bottom: 5px;
-  padding: 30px 30px 30px 80px; /* 4 */
-  color: #686868; /* 5 */
+  padding: 10px 20px 10px 70px; /* 4 */
+  min-width: 240px;
+  background-color: #f5f5f5;
+  color: #757575; /* 5 */
   text-decoration: none; /* 6 */
   border: 1px solid #E3E3E3; /* 7 */
   position: relative; /* 8 */
@@ -990,8 +846,7 @@ footer {
  */
 .download-button:focus,
 .download-button:hover {
-  border-color: #E31A4C; /* 1 */
-  outline: none; /* 2 */
+  background-color: darken(#f5f5f5, 4%);
 }
 
 /**
@@ -1017,7 +872,7 @@ footer {
   top: 0; /* 4 */
   bottom: 0; /* 4 */
   left: 0; /* 5 */
-  width: 80px; /* 6 */
+  width: 70px; /* 6 */
 }
 
 /**
