--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 
   {% include head.html %}
 
-  <body>
+  <body id="main" class="m-scene">
 
     {% include header.html %}
 
-    <main>
+    <main class="scene-main scene-main--fadein">
 
       {% if page.layout != "home" %}
 
@@ -149,6 +149,8 @@
         transport: 'beacon',
       });
   </script>
+  <script src="https://rawgit.com/miguel-perez/smoothState.js/master/demos/sidebar/assets/js/jquery.smoothState.min.js"></script>
+    <script src="https://rawgit.com/miguel-perez/smoothState.js/master/demos/sidebar/assets/js/main.js"></script>
   </body>
 
 </html>
