--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -45,7 +45,7 @@
         hitType: 'pageview',
         title: document.title,
         location: location.href.split('#')[0],
-        page: "download?="+location.href.split('download?=').pop(),
+        page: "redirect?="+location.href.split('redirect?=').pop(),
         transport: 'beacon',
       });
   </script>
@@ -53,7 +53,7 @@
   $( document ).ready(function() {
   var url = window.location.href;
   var id = url.split('=').pop();
-  url_noloop = url.split('download').pop();
+  url_noloop = url.split('redirect').pop();
   if ( url_noloop.includes('http') == false ) {
     setTimeout(function(){window.location="https://theproducoes.github.io/"},0)
   }else{
