--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,19 +44,17 @@
                 <h3>Elencos Atualizados</h3>
               </div>
               <div class="card-subtitle">
-                <h4>Brasileirão 2019</h4>
+                <h4>Brasileirão 2020</h4>
               </div>
               <div class="card-content teams">
                   <img src="{{ "/assets/img/escudos/athletico-pr_65.png" | relative_url }}" alt="Athletico-PR" title="Athletico-PR">
+                  <img src="{{ "/assets/img/escudos/Atletico-GO-65.png" | relative_url }}" alt="Atlético-GO" title="Atlético-GO">
                   <img src="{{ "/assets/img/escudos/atletico_mg_60x60.png" | relative_url }}" alt="Atlético-MG" title="Atlético-MG">
-                  <img src="{{ "/assets/img/escudos/avai_60x60_.png" | relative_url }}" alt="Avaí" title="Avaí">
                   <img src="{{ "/assets/img/escudos/bahia_60x60.png" | relative_url }}" alt="Bahia" title="Bahia">
                   <img src="{{ "/assets/img/escudos/botafogo_60x60.png" | relative_url }}" alt="Botafogo" title="Botafogo">
                   <img src="{{ "/assets/img/escudos/ceara_60x60.png" | relative_url }}" alt="Ceará" title="Ceará">
-                  <img src="{{ "/assets/img/escudos/Escudo-Chape-165.png" | relative_url }}" alt="Chapecoense" title="Chapecoense">
                   <img src="{{ "/assets/img/escudos/corinthians_60x60.png" | relative_url }}" alt="Corinthians" title="Corinthians">
-                  <img src="{{ "/assets/img/escudos/cruzeiro_65.png" | relative_url }}" alt="Cruzeiro" title="Cruzeiro">
-                  <img src="{{ "/assets/img/escudos/CSA_65.png" | relative_url }}" alt="CSA" title="CSA">
+                  <img src="{{ "/assets/img/escudos/coritiba65.png" | relative_url }}" alt="Coritiba" title="Coritiba">
                   <img src="{{ "/assets/img/escudos/flamengo_60x60.png" | relative_url }}" alt="Flamengo" title="Flamengo">
                   <img src="{{ "/assets/img/escudos/fluminense_60x60.png" | relative_url }}" alt="Fluminense" title="Fluminense">
                   <img src="{{ "/assets/img/escudos/fortaleza_65x65.png" | relative_url }}" alt="Fortaleza" title="Fortaleza">
@@ -64,8 +62,10 @@
                   <img src="{{ "/assets/img/escudos/gremio_60x60.png" | relative_url }}" alt="Grêmio" title="Grêmio">
                   <img src="{{ "/assets/img/escudos/inter65.png" | relative_url }}" alt="Internacional" title="Internacional">
                   <img src="{{ "/assets/img/escudos/palmeiras_60x60.png" | relative_url }}" alt="Palmeiras" title="Palmeiras">
+                  <img src="{{ "/assets/img/escudos/Red-Bull-Bragantino-65.png" | relative_url }}" alt="Red Bull Bragantino" title="Red Bull Bragantino">
                   <img src="{{ "/assets/img/escudos/santos_60x60.png" | relative_url }}" alt="Santos" title="Santos">
                   <img src="{{ "/assets/img/escudos/sao_paulo_60x60.png" | relative_url }}" alt="São Paulo" title="São Paulo">
+                  <img src="{{ "/assets/img/escudos/sport65.png" | relative_url }}" alt="Sport" title="Sport">
                   <img src="{{ "/assets/img/escudos/Vasco-65.png" | relative_url }}" alt="Vasco" title="Vasco">
               </div>
             </div>
