--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <span>&copy {{ 'now' | date: "%Y" }} - {{ site.title | escape }}</span>
+    <span>&copy {{ 'now' | date: "%Y" }} - {{ site.title | escape }} <script type="text/javascript" src="//rf.revolvermaps.com/0/0/9.js?i=54c1n0i69tk&amp;t=%C2%AD" async="async"></script></span>
 
   </div>
 
