--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,19 +27,19 @@
     <div class="container">
       <nav>
         <ul>
-          <li><a href="{{ "/" | relative_url }}">Página Inicial</a></li>
+          <li><a href="{{ "/" | relative_url }}"><img src="{{ "/assets/img/home.svg" | relative_url }}" alt="Logo">Página Inicial</a></li>
           <!--{% for post in site.categories['Atualizações'] limit:1 %}
             <li><a href="{{ post.url | relative_url }}">Atualização</a></li>
           {% endfor %}
           <li><a href="{{ "/2017/11/ultimate-dvd-fifa-08/" | relative_url }}">Ultimate DVD</a></li>
           <li><a href="{{ "/2017/11/fat-master-08/" | relative_url }}">FAT Master</a></li>-->
-          <li><a href="{{ "/jogo-completo/" | relative_url }}">Baixar jogo completo atualizado</a></li>
+          <li><a href="{{ "/jogo-completo/" | relative_url }}"><img src="{{ "/assets/img/download.svg" | relative_url }}" alt="Logo">Download do patch</a></li>
           {% for post in site.categories['Atualizações'] limit:1 %}
-          <li><a href="{{ post.url | relative_url }}">Baixar atualização mais recente</a></li>
+          <li><a href="{{ post.url | relative_url }}"><img src="{{ "/assets/img/download.svg" | relative_url }}" alt="Logo">Download da atualização</a></li>
           {% endfor %}
-          <li><a href="{{ "/musicas/" | relative_url }}">Músicas</a></li>
-          <li><a href="{{ "/perguntas-frequentes/" | relative_url }}">Perguntas frequentes</a></li>
-          <li><a href="{{ "/contato/" | relative_url }}">Contato</a></li>
+          <li><a href="{{ "/musicas/" | relative_url }}"><img src="{{ "/assets/img/musics.svg" | relative_url }}" alt="Logo">Músicas</a></li>
+          <li><a href="{{ "/perguntas-frequentes/" | relative_url }}"><img src="{{ "/assets/img/faq.svg" | relative_url }}" alt="Logo">Perguntas frequentes</a></li>
+          <li><a href="{{ "/contato/" | relative_url }}"><img src="{{ "/assets/img/contact.svg" | relative_url }}" alt="Logo">Contato</a></li>
           <!--<li id="logar"><a href="{{ "/login/" | relative_url }}" target="_self">Login</a></li>-->
           <li id="logado" style="display:none;"><a href="{{ "/login/" | relative_url }}">Vip</a></li>
           <li id="deslogar" style="display:none;"><a href="{{ "/login/" | relative_url }}" target="_self">Sair</a></li>
