--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -52,7 +52,7 @@
   <script type="text/javascript">
   $( document ).ready(function() {
   var url = window.location.href;
-  var id = url.split('=').pop();
+  var id = url.split('redirect?=').pop();
   url_noloop = url.split('redirect').pop();
   if ( url_noloop.includes('http') == false ) {
     setTimeout(function(){window.location="https://theproducoes.github.io/"},0)
