--- a/_includes/head.html
+++ b/_includes/head.html
@@ -138,8 +138,20 @@
     //}, 200);
   //}
 
-
-
+  </script>
+  <script>
+          /**
+* Função que acompanha um clique em um link externo no Google Analytics.
+* Essa função processa uma string de URL válida como um argumento e usa essa string de URL
+* como o rótulo do evento. Ao definir o método de transporte como 'beacon', o hit é enviado
+* usando 'navigator.sendBeacon' em um navegador compatível.
+*/
+var captureOutboundLink = function(url) {
+   ga('send', 'event', 'Navigation', 'Outbound Link Click', url, {
+     'transport': 'beacon',
+     'hitCallback': function(){document.location = url;}
+   });
+}
   </script>
 
 </head>
