--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,9 +43,9 @@
               <div class="card-title">
                 <h3>Elencos Atualizados</h3>
               </div>
-              <div class="card-subtitle">
+              <!--<div class="card-subtitle">
                 <h4>Brasileirão 2020</h4>
-              </div>
+              </div>-->
               <div class="card-content teams">
                   <img src="{{ "/assets/img/escudos/athletico-pr_65.png" | relative_url }}" alt="Athletico-PR" title="Athletico-PR">
                   <img src="{{ "/assets/img/escudos/Atletico-GO-65.png" | relative_url }}" alt="Atlético-GO" title="Atlético-GO">
