--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,6 +98,15 @@
                   </div>
               </div>
             </div>-->
+            <div class="card">
+              <div class="card-content partners">
+                  <div class="partner-banner">
+                    <a href="https://www.net-tv.biz">
+                      <img src="{{ "/assets/img/parceiros/nettv.jpg" | relative_url }}" alt="Net TV" title="Net TV">
+                    </a>
+                  </div>
+              </div>
+            </div>
             <!--<div class="card">
               <div class="card-title">
                 <h3>Trabalhos recentes</h3>
