--- a/assets/main.scss
+++ b/assets/main.scss
@@ -335,8 +335,11 @@ main {
 							justify-content: center;
 							flex-flow: row wrap;
 							a {
-								flex: 0 1 160px;
+								flex: 0 1 190px;
 								margin: 5px 5px 0px 5px;
+							}
+							img {
+								max-width: 100%;
 							}
 						}
 					}
