--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
       {% if page.layout != "home" %}
 
       {% else %}
-      <div class="featured" id="featured" data-turbolinks-permanent>
+      <!--<div class="featured" id="featured" data-turbolinks-permanent>
         <div class="container">
           <div id="feed"></div>
         </div>
-      </div>
+      </div>-->
       {% endif %}
 
       <div class="container">
@@ -98,7 +98,7 @@
                   </div>
               </div>
             </div>-->
-            <div class="card">
+            <!--<div class="card">
               <div class="card-content partners">
                   <div class="partner-banner">
                     <a href="https://www.net-tv.biz">
@@ -106,7 +106,7 @@
                     </a>
                   </div>
               </div>
-            </div>
+            </div>-->
             <!--<div class="card">
               <div class="card-title">
                 <h3>Trabalhos recentes</h3>
