Removendo live Terceiro Tempo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1269,7 +1269,7 @@ setUpProgressBar("#"+liveTitle.replace(/[^a-zA-Z0-9]/g, ''), start2.getTime(), e
       //liveG4BandSports();
       liveOsDonosDaBola();
       //liveEsporteTotal();
-      liveTerceiroTempo();
+      //liveTerceiroTempo();
       //liveSuperCopaDaUefa();
     }
   });
@@ -1319,7 +1319,7 @@ setUpProgressBar("#"+liveTitle.replace(/[^a-zA-Z0-9]/g, ''), start2.getTime(), e
       //liveG4BandSports();
       liveOsDonosDaBola();
       //liveEsporteTotal();
-      liveTerceiroTempo();
+      //liveTerceiroTempo();
       //liveSuperCopaDaUefa();
     }
     //quicklink.listen();
