Removendo slide notícias

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -789,8 +789,8 @@ $(function() {
     function resizeForm(){
       var width = (window.innerWidth > 0) ? window.innerWidth : document.documentElement.clientWidth;
       if(width > 1024 && window.location.href == "{{ site.url }}/"){
-          parseRSS();
-          $(".splide").show();
+          //parseRSS();
+          //$(".splide").show();
       } else {
         $(".splide").remove();
       }
