--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -425,7 +425,7 @@
                     var scc_image = $(this).find('media\\:content').attr('url');
                     if(scc_image != undefined) {
                     // Append elements to the new element
-                    $build.append('<div class="post-img"><a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'"><figure><img src="'+scc_image+'" alt="'+scc_title+'" title="'+scc_title+'"></figure></a></div><div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'">'+scc_title+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
+                    $build.append('<div class="post-img"><a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'"><figure><img src="'+scc_image+'" alt="'+scc_title+'" title="'+scc_title+'"></figure></a></div><div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'">'+scc_title+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
                     // Append the new element to the container
                     $('.news-items').append($build);
                     } else {
@@ -455,7 +455,7 @@
                 var scc_image = $(this).find('media\\:content').attr('url');
                 if(scc_image != undefined) {
                 // Append elements to the new element
-                $build.append('<div class="post-img"><a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'"><figure><img src="'+scc_image+'" alt="'+scc_title+'" title="'+scc_title+'"></figure></a></div><div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'">'+scc_title+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
+                $build.append('<div class="post-img"><a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'"><figure><img src="'+scc_image+'" alt="'+scc_title+'" title="'+scc_title+'"></figure></a></div><div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'">'+scc_title+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
                 // Append the new element to the container
                 $('.news-items').append($build);
                 } else {
@@ -532,7 +532,7 @@
                     //var scc_image = $(this).find('itunes\\:image').attr('href');
                     var scc_image = $(this).find('media\\:content').attr('url');
                     // Append elements to the new element
-                    $build.append('<a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'">'+scc_title+'</a>');
+                    $build.append('<a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'">'+scc_title+'</a>');
                     // Append the new element to the container
                     $('.trends-items').append($build);
                   });
@@ -558,7 +558,7 @@
                 //var scc_image = $(this).find('itunes\\:image').attr('href');
                 var scc_image = $(this).find('media\\:content').attr('url');
                 // Append elements to the new element
-                $build.append('<a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title+'">'+scc_title+'</a>');
+                $build.append('<a href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title)+'">'+scc_title+'</a>');
                 // Append the new element to the container
                 $('.trends-items').append($build);
               });
@@ -631,7 +631,7 @@
                     //var scc_image = $(this).find('itunes\\:image').attr('href');
                     var scc_image = $(this).find('media\\:content').attr('url');
                     // Append elements to the new element
-                    $build.append('<div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title.slice(0,scc_titleReplaced)+'">'+scc_title.slice(0,scc_titleReplaced)+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title.slice(0,scc_titleReplaced)+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
+                    $build.append('<div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title.slice(0,scc_titleReplaced))+'">'+scc_title.slice(0,scc_titleReplaced)+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title.slice(0,scc_titleReplaced)+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
                     // Append the new element to the container
                     $('.news2-items').append($build);
                   });
@@ -660,7 +660,7 @@
                 //var scc_image = $(this).find('itunes\\:image').attr('href');
                 var scc_image = $(this).find('media\\:content').attr('url');
                 // Append elements to the new element
-                $build.append('<div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+scc_title.slice(0,scc_titleReplaced)+'">'+scc_title.slice(0,scc_titleReplaced)+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title.slice(0,scc_titleReplaced)+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
+                $build.append('<div class="post-text"><div class="category"><em>'+scc_category+'</em></div><h2><a class="post-link" href="{{ "/redirect?=" | relative_url }}'+scc_link+'&?t='+encodeURIComponent(scc_title.slice(0,scc_titleReplaced))+'">'+scc_title.slice(0,scc_titleReplaced)+'</a></h2><span class="post-meta">'+scc_date_format+'</span><div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="'+scc_link+'" data-a2a-title="'+scc_title.slice(0,scc_titleReplaced)+'"> <a class="a2a_button_facebook"></a> <a class="a2a_button_twitter"></a> <a class="a2a_button_whatsapp"></a><a class="a2a_button_telegram"></a></div></div>');
                 // Append the new element to the container
                 $('.news2-items').append($build);
               });
