--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="banner" id="banner" style="display:none;">
+<!--<div class="banner" id="banner" style="display:none;">
   <div id="tour_schedule"></div><style>body{margin:0;padding:0}</style>
-</div>
+</div>-->
 <!-- Html Elements for Search -->
 <!--<div id="search-container">
 <input type="text" id="search-input" placeholder="pesquisar...">
