--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
     {{ content }}
   </div>
 
-  {% if site.disqus.shortname %}
+  <!--{% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
   {% if page.comments %}
@@ -54,5 +54,5 @@ layout: default
       </script>
       <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-  {% endif %}
+  {% endif %}-->
 </article>
